# livemech

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  pyrightconfig.json
kubernetes/: cluster.yaml  deployment.yaml  ingress.yaml  mysql-operator.yaml  nginx-ingress.yaml  service.yaml
kubernetes/monitoring/: loki-values.yaml  mysql-exporter-values.yaml  prometheus-values.yaml
kubernetes/mysql/: backup.yaml  create-db-job.yaml  innodb-cluster.yaml  secret.yaml  service.yaml  statefulset.yaml
migrations/: env.py
migrations/versions/: d5b4cd4a49e1_initialcreate.py
src/livemech/: main.py
src/livemech/api/routers/: shops.py
src/livemech/application/shops/: create_shop.py  get_shops.py
src/livemech/domain/: shop.py
src/livemech/infrastructure/: models.py
src/livemech/infrastructure/database/: session.py
tests/: test_root.py
tests/application/shops/: test_create_shop.py
tests/domain/: test_shop.py
